syntax = "proto3";

package def.error_code_constants;

option java_package = "com.app.passport.proto";
option java_outer_classname = "ErrorCodeConstantsDef";
option java_multiple_files = true;

// 0 成功 -1 io错误

// 错误码定义
enum ERROR_CODE_CONSTANTS {
    // 成功
    SUCESS = 0;
    // 账号不存在
    ACCOUNT_NOT_FOUND = 1;
    // 用户不存在
    ACCOUNT_MEMBER_NOT_FOUND = 2;
    // 密码错误
    PASSWORD_VALID_ERROR = 3;
    // 账号已经存在
    ACCOUNT_EXISTS = 4;
    // 输入电话号码格式不正确
    INPUT_TELEPHONE_FORMAT_ERROR = 5;
    // 输入密码的长度错误
    INPUT_CODE_ERROR = 6;
}